2017-05-01  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/utils/__init__.py (deprecated):

	Decorator to raise a simple deprecation warning.

	* typhon/utils/tests, typhon/utils/tests/test_utils.py:

	Test module for `typhon.utils` functions. Currently containing a
	test for deprecation warnings.

	* doc/typhon.utils.rst: Added `deprecated` to documentation.

2017-04-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/tests/test_xml.py:

	Fixed path to reference files.

2017-04-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py (load_directory):

	Improved inline and docstring documentation.

	* typhon/arts/xml/tests/test_xml.py:

	Added tests for high-level XML functions.
	Currently containing two test for `load_directory()`.

2017-04-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py (load_directory):

	Improved readability and general function structure.

2017-04-25  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/stylelib/typhon.mplstyle:

	Adapted the typhon stylesheet to fit well with the changing
	defaults in matplotlib 2.0.

	* typhon/plots/stylelib/typhon-classic.mplstyle:

	The old typhon stylesheet.

	* typhon/plots/stylelib/typhon-fullcycler.mplstyle,
	  typhon/plots/stylelib/typhon-geometry.mplstyle:

	Removed the separate geoemetry and color-cycler as they are
	probably unused.

	* doc/pyplots/stylesheet_gallery.py:

	Modified the test script for better appearance.

	Plot more lines to show the cycling through linestyles even
	when using the larger color-cycler in matplotlib 2.0.

	* typhon/math/common.py (nlogspace): Added example.

	* typhon/plots/plots.py: Removed forgotten debug `print()`.

2017-04-24  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/plots.py:

	* (HectoPascalFormatter, HectoPascalLogFormatter):

	Added two Formatter to create labels for profile plots.

	* (profile_p, profile_p_log): Use newly implemented Formatter.
